updates to template for banner

--- a/openmech/pages/templates/pages/base.html
+++ b/openmech/pages/templates/pages/base.html
@@ -41,6 +41,9 @@
           </div>
         </div>
       </nav>
+      <div id="topbanner">
+        <img src = "{% static 'pages/openmech-banner-11.jpg' %}" alt=""/>
+      </div>
     </header>
     <main role="main" class="container">
       <div class="row">
