Added models in task manager app. Not working or debugged yet.

--- a/openmech/pages/templates/pages/base.html
+++ b/openmech/pages/templates/pages/base.html
@@ -32,7 +32,7 @@
               <a class="nav-item nav-link" href="{% url 'pages-dashboard' %}">Dashboard</a>
               <a class="nav-item nav-link" href="{% url 'pages-learn' %}">Learn</a>
               <a class="nav-item nav-link" href="{% url 'pages-groups' %}">Groups</a>
-              <a class="nav-item nav-link" href="{% url 'pages-blogs' %}">Blog</a>
+              <a class="nav-item nav-link" href="{% url 'pages-blogs' %}">Blogs</a>
               <a class="nav-item nav-link" href="{% url 'pages-forum' %}">Forum</a>
               <a class="nav-item nav-link" href="{% url 'pages-mechlab' %}">MechLab</a>
               <a class="nav-item nav-link" href="{% url 'pages-ecosystem' %}">Ecosystem</a>
@@ -48,7 +48,7 @@
         </div>
       </nav>
       <div id="topbanner">
-        <img src = "{% static 'pages/openmech-banner.jpg' %}" alt=""/>
+        <img src = "{% static 'pages/openmech-banner.jpg' %}" alt="" class="center"/>
       </div>
     </header>
     <main role="main" class="container">
