--- a/openmech/static/pages/main.css
+++ b/openmech/static/pages/main.css
@@ -71,6 +71,13 @@ body {
     height: 25px;
     vertical-align: middle;
   }
+
+  .center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
   
   .account-img {
     height: 125px;
@@ -82,5 +89,7 @@ body {
   .account-heading {
     font-size: 2.5rem;
   }
+
+
 
   
