--- a/openmech/staticfiles/pages/main.css
+++ b/openmech/staticfiles/pages/main.css
@@ -83,4 +83,11 @@ body {
     font-size: 2.5rem;
   }
 
+  .center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
+
   
